fix carousel controls visibility

--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,6 @@ body {
 
 .carousel-control-next-icon,
 .carousel-control-prev-icon {
-    background: transparent no-repeat center center;
     background-size: 100% 100%;
     height: 5vw !important;
     width: 5vw !important;
